fix(style): show wd-item better on small screens
like Smartphones

--- a/public/style.css
+++ b/public/style.css
@@ -86,6 +86,11 @@ input[type=search] {
 	margin: 10px 0;
 }
 
+wd-item {
+	max-width: 100%;
+	width: 450px;
+}
+
 wd-item > * {
 	align-items: center;
 	background-position: center;
@@ -99,7 +104,6 @@ wd-item > * {
 	min-height: 15vh;
 	overflow: hidden;
 	text-decoration: none;
-	width: 450px;
 }
 
 wd-item > * > * {
